--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,12 +38,19 @@ body {
     /* background-image: url(../higuchimadoka.jpg); */
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
+
+    display: flex;
+    align-content: center;
+    align-items: center;
+    /* flex-wrap: wrap; */
+
+    background-color: black;
 }
 
 #main {
     position: absolute;
-    /* inset: 0 0 0 0;
-    margin: auto; */
+    top: 0;
 
     width: 100vw;
     height: 100vh;
@@ -51,9 +58,9 @@ body {
     /* transform: scaleY(-1);   */
 
     background-color: rgb(0 0 0 /0.8);
-    z-index: -1;
+    /* z-index: -1; */
 
-    /* backdrop-filter: blur(10px); */
+    backdrop-filter: blur(10px);
 }
 
 #cursorContainer {
@@ -65,6 +72,7 @@ body {
     height: 384px;
 
     transform: scaleY(-1);
+    opacity: 0;
 }
 
 #cursor {
@@ -126,6 +134,39 @@ body {
     animation: linear 200ms fadeOutSlider;
 }
 
+#settingsPanel {
+    position: relative;
+    width: 0;
+    height: 100vh;
+
+    background-color: rgb(22, 23, 29);
+
+    transition: ease-in-out 200ms;
+    opacity: 0;
+}
+
+#playerContainer {
+    position: relative;
+    margin: 20px;
+
+    /* aspect-ratio: 16 / 9; */
+    max-width: calc(100% - 40px);
+    width: calc(100% - 40px);
+    height: calc(100% - 40px);
+    /* width: 1366px; */
+    /* width: 1600px; */
+    /* width: 1920px; */
+
+    border-radius: 20px;
+
+    background-size: cover;
+    background-position: center;
+
+    overflow: hidden;
+
+    transition: ease-in-out 300ms;
+}
+
 canvas {
     position: absolute;
     inset: 0 0 0 0;
@@ -133,9 +174,34 @@ canvas {
     margin: auto;
 
     /* transform: scaleY(-1); */
-    z-index: -1;
+    /* z-index: 0; */
 
     /* background-color: rgba(255, 255, 255, 0.1); */
+}
+
+#overlay {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+
+    background-color: black;
+    opacity: 0.7;
+}
+
+#settingsButton {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+
+    width: 60px;
+    height: 60px;
+
+    background-image: url(../static/settings.png);
+    background-size: 60%;
+    background-position: center;
+    background-repeat: no-repeat;
+
+    transition: ease-in-out 50ms;
 }
 
 svg {
@@ -145,11 +211,26 @@ svg {
 #playButton {
     position: absolute;
 
-    bottom: 0;
-    left: 0;
+    bottom: 20px;
+    left: 20px;
 
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
 
-    background-color: red;
+    background-image: url(../static/play.png);
+    background-size: 50%;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+button {
+    background-color: transparent;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    transition: ease-in-out 50ms;
+}
+
+button:hover {
+    background-color: rgb(255 255 255 / 0.2);
 }
