--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,30 +1,32 @@
-@keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+@font-face {
+    font-family: Torus;
+    font-weight: 600;
+    src: url(../fonts/TorusBold.otf);
 }
-
-@keyframes fadeOut {
-    0% {
-        transform: scale(1);
-        opacity: 1;
-    }
-    100% {
-        transform: scale(1.4);
-        opacity: 0;
-    }
+@font-face {
+    font-family: Torus;
+    font-weight: 700;
+    src: url(../fonts/TorusHeavy.otf);
 }
-
-@keyframes fadeOutSlider {
-    0% {
-        opacity: 1;
-    }
-    100% {
-        opacity: 0;
-    }
+@font-face {
+    font-family: Torus;
+    font-weight: 500;
+    src: url(../fonts/TorusSemiBold.otf);
+}
+@font-face {
+    font-family: Torus;
+    font-weight: 400;
+    src: url(../fonts/TorusRegular.otf);
+}
+@font-face {
+    font-family: Torus;
+    font-weight: 300;
+    src: url(../fonts/TorusLight.otf);
+}
+@font-face {
+    font-family: Torus;
+    font-weight: 200;
+    src: url(../fonts/TorusThin.otf);
 }
 
 body {
@@ -46,6 +48,10 @@ body {
     /* flex-wrap: wrap; */
 
     background-color: black;
+
+    font-family: Torus;
+    font-weight: 500;
+    color: white;
 }
 
 #main {
@@ -105,50 +111,12 @@ body {
     border-radius: 80%;
 }
 
-.hitCircle {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-
-    /* background-color: rgb(206, 94, 94); */
-    background-image: url(../static/hitcircleoverlay@2x.png);
-    background-size: 108.474576271% 108.474576271%;
-    background-position: center;
-    border-radius: 50%;
-
-    opacity: 1;
-    z-index: 999;
-}
-
 #main img {
     display: none;
 }
 
-.fadeIn {
-    animation: linear 300ms fadeIn;
-}
-
-.fadeOut {
-    animation: cubic-bezier(0, 0.7, 0.8, 1) 200ms fadeOut;
-}
-
-.fadeOutSlider {
-    animation: linear 200ms fadeOutSlider;
-}
-
-#settingsPanel {
-    position: relative;
-    width: 0;
-    height: 100vh;
-
-    background-color: rgb(22, 23, 29);
-
-    transition: ease-in-out 200ms;
-    opacity: 0;
-}
-
 #playerContainer {
-    position: relative;
+    position: absolute;
     margin: 20px;
 
     /* aspect-ratio: 16 / 9; */
@@ -235,4 +203,138 @@ button {
 
 button:hover {
     background-color: rgb(255 255 255 / 0.2);
+}
+
+@keyframes spin {
+    0% {
+        stroke-dashoffset: 200;
+        transform: scale(1, 1);
+    }
+    50% {
+        stroke-dashoffset: 0;
+        transform: scale(1, 1);
+    }
+    50.0001% {
+        transform: scale(1, -1) translateY(-90px);
+    }
+    99.9999% {
+        stroke-dashoffset: 200;
+        transform: scale(1, -1) translateY(-90px);
+    }
+    100% {
+        transform: scale(1, 1);
+    }
+}
+
+@keyframes osuSpinnerKurwa {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.loading {
+    position: absolute;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0 0 0 / 0.5);
+    border-radius: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.loading circle {
+    fill: none;
+    stroke: white;
+    stroke-width: 10px;
+    stroke-dasharray: 200;
+    stroke-dashoffset: 150;
+    stroke-linecap: round;
+
+    animation: spin 2s infinite;
+}
+
+.loading svg {
+    display: block;
+    animation: linear osuSpinnerKurwa 2s infinite;
+}
+
+#settingsPanel {
+    position: absolute;
+    top: 0;
+    left: -600px;
+    width: 600px;
+    height: 100vh;
+
+    background-color: #18171c;
+
+    transition: ease-in-out 200ms;
+    opacity: 0;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.section {
+    position: relative;
+    box-sizing: border-box;
+    width: 100%;
+
+    padding: 40px;
+    background-color: #302e38;
+    font-weight: 400;
+}
+
+#header {
+    font-size: 3em;
+}
+
+#description {
+    font-size: 1em;
+}
+
+#title {
+    font-size: 2em;
+}
+
+.list {
+    padding: 20px 0;
+
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+.selection {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    align-content: center;
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    width: 40px;
+    height: 10px;
+
+    outline: solid 3px #8c66ff;
+    border-radius: 25px;
+
+    transition: cubic-bezier(.03,.16,.29,1.45) 100ms;
+}
+
+input[type="checkbox"]:hover {
+    box-shadow: 0 0 5px 2px #8c66ff;
+    filter: brightness(2);
+}
+
+input[type="checkbox"]:checked {
+    width: 50px;
+    background-color: #8c66ff;
 }
