Added snaking sliders

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,7 +40,7 @@ body {
 
     overflow: hidden;
     /* background-image: url(../higuchimadoka.jpg); */
-    background-size: 120%;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 
