--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,7 +119,7 @@ body {
     color: white;
 
     border: none;
-    background-color: rgba(0 0 0 / 0.5);
+    background-color: #26252c;
     border-radius: 15px;
 }
 
