--- a/styles/styles.css
+++ b/styles/styles.css
@@ -173,7 +173,7 @@ canvas {
     /* z-index: 0; */
 
     /* background-color: rgba(255, 255, 255, 0.1); */
-    transition: ease-in-out 200ms;
+    /* transition: ease-in-out 200ms; */
 }
 
 #overlay {
