--- a/styles/styles.css
+++ b/styles/styles.css
@@ -282,6 +282,30 @@ svg {
     background-repeat: no-repeat;
 }
 
+#prevButton {
+    width: 60px;
+
+    padding: 0;
+    margin: 15px 15px;
+
+    background-image: url(../static/prev.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#nextButton {
+    width: 60px;
+
+    padding: 0;
+    margin: 15px 15px;
+
+    background-image: url(../static/next.png);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
 #playerController input[type="range"] {
     /* position: absolute; */
     /* bottom: 20px; */
@@ -566,24 +590,43 @@ input[type="checkbox"]:checked {
         justify-content: flex-start;
         padding: 0;
 
-        background-size: 0;
+        overflow: hidden;
+        /* background-size: 0; */
     }
 
     #main {
-        background-color: transparent;
-        backdrop-filter: none;
+        /* background-color: transparent; */
+        /* backdrop-filter: none; */
+        overflow: hidden;
     }
 
     #inputContainer {
         padding: 10px;
         margin: 0;
+
+        gap: 5px;
+    }
+
+    #inputContainer input[type="text"] {
+        background-color: rgb(0 0 0 /0.5);
+        border-radius: 5px;
+    }
+
+    #inputContainer button:nth-child(3) {
+        background-color: rgba(24, 23, 31, 0.5);
+        border-radius: 5px;
+    }
+
+    #settingsButton {
+        height: 30px;
     }
 
     #playerContainer {
-        aspect-ratio: 16 / 9;
+        aspect-ratio: 4 / 3;
         height: auto;
 
         border-radius: 0;
+        margin-bottom: 120px;
     }
 
     #overlay {
@@ -594,9 +637,10 @@ input[type="checkbox"]:checked {
         top: 100%;
 
         width: 100%;
-        padding: 20px 0;
+        height: 120px;
+        padding: 0;
 
-        background-color: #18171c;
+        /* background-color: #18171c; */
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -608,14 +652,17 @@ input[type="checkbox"]:checked {
     }
 
     #playerController {
-        position: absolute;
+        position: relative;
         width: 100%;
-        height: auto;
+        height: 100%;
         bottom: 0;
         border-radius: 0 0 0 0;
 
         flex-wrap: wrap;
+        align-content: flex-start;
+        justify-content: center;
 
+        background-color: rgba(0 0 0 / 0.5);
     }
 
     #settingsPanel {
@@ -627,6 +674,7 @@ input[type="checkbox"]:checked {
     }
 
     #timeContainer {
+        background-color: rgba(0 0 0 / 0.5);
         width: 100%;
         padding: 20px;
         margin-bottom: 20px;
@@ -634,10 +682,22 @@ input[type="checkbox"]:checked {
         justify-content: center;
     }
 
-    #playButton {
-        width: 100%;
+    #playButton,
+    #prevButton,
+    #nextButton {
+        /* width: 100%; */
         height: 30px;
         margin: 0;
+
+        padding: 0;
+    }
+
+    #playButton:focus {
+        outline: none;
+    }
+
+    #playButton:hover {
+        filter: none;
     }
 
     #progress {
@@ -681,5 +741,74 @@ input[type="checkbox"]:checked {
 @media screen and (max-width: 425px) {
     #metadata {
         font-size: 3vw;
+    }
+}
+
+@media screen and (min-aspect-ratio: 16 / 9) and (max-width: 915px) {
+    body {
+        padding: 0;
+    }
+
+    #inputContainer {
+        padding: 0 10px;
+        margin: 0;
+        background-color: rgb(0 0 0 /0.5);
+    }
+
+    #settingsButton {
+        margin: 0;
+    }
+
+    #inputContainer input[type="text"] {
+        width: 100%;
+        border-radius: 5px;
+
+        background-color: rgb(0 0 0 /0.5);
+    }
+
+    #inputContainer button:nth-child(3) {
+        border-radius: 5px;
+        background-color: rgb(0 0 0 /0.5);
+    }
+
+    #playerContainer {
+        padding-top: 50px;
+        border-radius: 0;
+    }
+
+    #overlay {
+        top: 0;
+        /* padding-top: 50px; */
+        border-radius: 0;
+    }
+
+    #metadata {
+        top: 0;
+
+        padding: 0 10px;
+
+        height: 50px;
+        font-size: 1vw;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    #playerController {
+        border-radius: 0;
+        background-color: rgb(0 0 0 /0.5);
+    }
+
+    #timeContainer {
+        background-color: rgb(0 0 0 /0.5);
+    }
+
+    #playerController button {
+        margin: 12px 0;
+    }
+
+    #playerController button:hover {
+        filter: none;
     }
 }
