--- a/styles/styles.css
+++ b/styles/styles.css
@@ -119,7 +119,7 @@ body {
     color: white;
 
     border: none;
-    background-color: transparent;
+    background-color: rgba(0 0 0 /.5);
     border-radius: 10px;
     outline: solid 2px #4c566a;
 }
