--- a/styles/styles.css
+++ b/styles/styles.css
@@ -225,6 +225,8 @@ canvas {
     height: 100%;
 
     border-radius: 20px 20px 0 0;
+    background-size: cover;
+    background-position: center;
 }
 
 #metadata {
